XP1: Manually added the answers to the Q4

--- a/analyse2/analyse.Rmd
+++ b/analyse2/analyse.Rmd
@@ -634,7 +634,9 @@ wilcox.test(DTFormCustom$objectifs + 1, mu = 3, alternative = "less", conf.int =
 ####Q4: Questionnaire sur la partie préférée
 
 ```{r echo=FALSE}
-
+DTFormPrefere <- data.table(vanilla = "vanilla", mod = "mod")
+DTFormPrefere$vanilla <- 37
+DTFormPrefere$mod <- 41
 
 ```
 
