--- a/analyse2/analyse.Rmd
+++ b/analyse2/analyse.Rmd
@@ -643,12 +643,20 @@ DTFormPrefere$mod <- 41
 ####Q5: Questionnaire sur les processus
 
 ```{r echo=FALSE}
-# Distribution de l'interet pour les différents pouvoirs
-barplot(rowSums(data.table(rbind(nrow(DTForm[autres_p1==0]), nrow(DTForm[autres_p1==1]), nrow(DTForm[autres_p1==2]), nrow(DTForm[autres_p1==3])))), main="Utiliseriez vous le pouvoir Compagnon dans d'autres contextes de jeu ou d'autres parties de Minecraft ?", xlab="Non, je ne sais pas, peut-être, oui absolument", ylab="Nombre de personnes")
+# Utiliseriez vous le pouvoir Compagnon dans d'autres contextes de jeu ou d'autres parties de Minecraft ?
+DTQ5 <- data.table(rbind(nrow(DTFormCustom[autres_p1==0]), nrow(DTFormCustom[autres_p1==1]), nrow(DTFormCustom[autres_p1==2]), nrow(DTFormCustom[autres_p1==3])))
 
-barplot(rowSums(data.table(rbind(nrow(DTForm[autres_p2==0]), nrow(DTForm[autres_p2==1]), nrow(DTForm[autres_p2==2]), nrow(DTForm[autres_p2==3])))), main="Utiliseriez vous le pouvoir Roi des Lapins dans d'autres contextes de jeu ou d'autres parties de Minecraft ?", xlab="Non, je ne sais pas, peut-être, oui absolument", ylab="Nombre de personnes")
+barplot(rowSums(DTQ5), main="", names.arg=c("non", "je ne sais pas", "peut-être", "oui, absolument"), cex.names = 1)
+summary(DTFormCustom$autres_p1 + 1)
+wilcox.test(DTFormCustom$autres_p1 + 1, mu = 2, alternative = "two.sided", conf.int = T)
 
-barplot(rowSums(data.table(rbind(nrow(DTForm[autres_p3==0]), nrow(DTForm[autres_p3==1]), nrow(DTForm[autres_p3==2]), nrow(DTForm[autres_p3==3])))), main="Utiliseriez vous le pouvoir Les autres dans d'autres contextes de jeu ou d'autres parties de Minecraft ?", xlab="Non, je ne sais pas, peut-être, oui absolument", ylab="Nombre de personnes")
+# Utiliseriez vous le pouvoir Roi des Lapins dans d'autres contextes de jeu ou d'autres parties de Minecraft ?
+barplot(rowSums(data.table(rbind(nrow(DTFormCustom[autres_p2==0]), nrow(DTFormCustom[autres_p2==1]), nrow(DTFormCustom[autres_p2==2]), nrow(DTFormCustom[autres_p2==3])))), main="", names.arg=c("non", "je ne sais pas", "peut-être", "oui, absolument"), cex.names = 1)
+
+# Utiliseriez vous le pouvoir Les autres dans d'autres contextes de jeu ou d'autres parties de Minecraft ?
+barplot(rowSums(data.table(rbind(nrow(DTFormCustom[autres_p3==0]), nrow(DTFormCustom[autres_p3==1]), nrow(DTFormCustom[autres_p3==2]), nrow(DTFormCustom[autres_p3==3])))), main="", names.arg=c("non", "je ne sais pas", "peut-être", "oui, absolument"), cex.names = 1)
+
+remove(DTQ5)
 ```
 
 ####Q6: Questionnaire sur les lieux
